Changelog
=========

1.0b2 - unreleased
------------------
* Make it possible to restrict the field to objects below a path
  The constructor of ObjPathSource takes a path keyword argument
  with a PathIndex catalog query. This argument filters objects
  outside of this path. If the navigation_tree_query does not have
  a path argument, the path is also copied into this query.
  [gaudenzius]

* Update widget in the contenttree-fetch browser view
  The widget.update() call rebinds to source which previously
  was only bound during traversal. This avoids problems with
  sources that only work after security is applied.
  [gaudenzius]


1.0b1 - 2010-04-19
------------------

* Adjusted styles so the widget looks reasonable with Plone 4's sunburst theme.
  [davisagli]

* Fix icons in CMF 2.2.  This closes
  http://code.google.com/p/dexterity/issues/detail?id=111
  [davisagli]

* Make the widget work properly on Zope 2.12
  [optilude]

* Add a template for HIDDEN_MODE.
  [csenger]

* Convert all strings in a new navtree node into unicode using the site 
  encoding to render non-ascii characters in the widget.
  [csenger]

* Added message IDs for translations and added locales directory with
  german translations.
  [jbaumann]

1.0a5 - 2009-08-02
------------------

* Don't filter children of non-queriable parent types (e.g. Large Plone
  Folders).
  [optilude]

1.0a3 - 2009-07-12
------------------

* Apply patch from Gerhard Weis to make the lightbox play nicer with CSS
  z-indexes.
  [optilude]

1.0a3 - 2009-06-29
------------------

* Fix security validator to work properly on add views and other views using
  namespace traversal (++add++...)
  [optilude]

1.0a2 - 2009-06-28
------------------

* Fix display widgets.
  [optilude]

* Import SitemapNavtreeStrategy conditionally so it doesn't break on Plone
  trunk. [davisagli]

1.0a1 - 2009-04-17
------------------

* Initial release